--- a/src/scss/app2.scss
+++ b/src/scss/app2.scss
@@ -27,8 +27,44 @@ a {
     text-decoration: none;
 }
 
+.btn {
+    cursor: pointer;
+    padding: 11px 35px;
+    display: inline-block;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 28px;
+    text-align: center;
+    background-color: #2f2f2f;
+    color: #ffffff;
+    border-radius: 30px;
+    border: 2px solid #ffffff;
+
+    &.btn-sofa {
+        background-color: #f9bf29;
+        color: #2f2f2f;
+
+        &:hover {
+            background: darken(#f9bf29, 10);
+            color: #ffffff;
+        }
+    }
+    &.outline {
+        color: #ffffff;
+        background: transparent;
+    }
+}
+
+.buttons {
+    margin-top: 117px;
+    display: flex;
+    gap: 14px;
+}
+
 .header {
     background-color: #3B5D50;
+    border-bottom: 1px solid #72a78c;
 
     &.fixed {
         position: fixed;
@@ -40,6 +76,7 @@ a {
 }
 
 .logo {
+    z-index: 2;
     a {
         color: #fff;
     }
@@ -212,4 +249,30 @@ a {
             }
         }
     }
+}
+
+
+
+.section-main {
+    .sofa {
+        padding-top: 90px;
+        background-color: #3B5D50;
+        display: flex;
+        justify-content: center;
+
+        .item {
+            flex: 0 1 420px;
+        }
+    }
+
+}
+
+.title {
+    color: #fff;
+    font-size: 45px;
+
+    // @media (max-width: $breakpoint768) {
+
+    // }
+
 }
