--- a/src/scss/app2.scss
+++ b/src/scss/app2.scss
@@ -23,10 +23,17 @@ $fontMain:'Inter', sans-serif;
     font-family: 'Inter', sans-serif;
 }
 
+body {
+    background-color: #EFF2F1;
+}
+
 a {
     text-decoration: none;
 }
-
+// section {
+//     margin: 0 auto;
+//     max-width: 1400px;
+// }
 .btn {
     cursor: pointer;
     padding: 11px 35px;
@@ -353,5 +360,87 @@ a {
 
 
 .choose {
-    padding: 25px 0 70px 0;
+    padding: 60px 0 70px 0;
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin:0 auto;
+    max-width: 1200px;
+
+    .left {
+        width: 514px;
+        flex: 0 1 514px;
+        // padding-top: 60px;
+
+        .title {
+            font-style: normal;
+            font-weight: 600;
+            font-size: 34px;
+            line-height: 41px;
+            color: #2F2F2F;
+        }
+
+        .text {
+            margin-top: 20px;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 24px;
+            color: #6A6A6A;
+        }
+        // display: flex;
+    }
+    .right {
+        position: relative;
+
+        &:after {
+            position: absolute;
+            content: "";
+            background: rgba(53, 115, 110, 0.1);
+            border-radius: 20px;
+            width: 296px;
+            top: 120px;
+            left: -310px;
+            height: 307px;
+        }
+
+        .ydotted {
+            position: absolute;
+            top: -60px;
+            left: -60px;
+            z-index: -1;
+        }
+    }
+}
+
+.why {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 40px;
+    margin-top: 80px;
+
+    // &-img {
+    //     z-index: 1;
+    // }
+
+    &-item {
+        width: 200px;
+        // margin: 40px 40px 40px 0;
+    }
+
+    &-text {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 22px;
+        color: #6A6A6A;
+        margin-top: 10px;
+    }
+    &-title {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 22px;
+        color: #2F2F2F;
+    }
 }
